Realizados los tempaltes para el admin

--- a/app/Views/paraBorrar/tables.html
+++ b/app/Views/paraBorrar/tables.html
@@ -194,7 +194,7 @@
               </div>
               <div class="card-body">
                 <div class="table-responsive">
-                  <table class="table tablesorter " id="">
+                  <table class="table tablesorter " id="p">
                     <thead class=" text-primary">
                       <tr>
                         <th>
