--- a/public/assets/css/black-dashboard.css
+++ b/public/assets/css/black-dashboard.css
@@ -19076,13 +19076,14 @@ fieldset[disabled] .form-control {
 
 textarea.form-control {
     max-width: 100%;
-    max-height: 80px;
+    max-height: 100%;
     padding: 10px 10px 0 0;
     resize: none;
     border: none;
     border-bottom: 1px solid #2b3553;
     border-radius: 0;
     line-height: 2;
+    font-size: 1rem;
 }
 
 textarea.form-control:focus,
