Select multiple mejorado y mejoras generales

--- a/public/assets/css/black-dashboard.css
+++ b/public/assets/css/black-dashboard.css
@@ -54,6 +54,13 @@
     --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
+*{
+    margin: 0px;
+    padding: 0px;
+    all: unset;
+    display: revert;
+}
+
 *,
 *::before,
 *::after {
@@ -20511,3 +20518,32 @@ select:not([multiple]) + .select2-container .select2-search {
     border-color: #fff transparent transparent transparent; /* Cambia el color de las flechas */
     background: #e14eca;
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: #ffffff;
+    transition: background-color 5000s ease-in-out 0s;
+    box-shadow: inset 0 0 20px 20px #23232329;
+}
+
+.select2-container--default .select2-selection--multiple .select2-selection__choice {
+    background-color: #f79959 !important;
+    border: 1px solid #23252b;
+}
+
+.select2-container--default .select2-selection--multiple .select2-selection__choice__remove{
+    border-right: 1px solid #23252b;
+    color: #23252b;
+}
+
+.select2-container--default .select2-selection--multiple .select2-selection__choice__remove:hover,.select2-container--default .select2-selection--multiple .select2-selection__choice__remove:focus {
+    background-color: #f79959;
+}
+
+.select2-selection--multiple {
+    height: 60px;
+    overflow-y: scroll;
+} 
