Página de login y regsitro visual, login sin permisos

--- a/public/assets/css/common.css
+++ b/public/assets/css/common.css
@@ -1,4 +1,12 @@
+body{
+    min-width: 330px !important; 
+}
+
 h1 img{
     width: 10%;
     min-width: 80px;
+}
+
+a:hover{
+    cursor: pointer !important;
 }
