--- a/public/assets/css/paginacion.css
+++ b/public/assets/css/paginacion.css
@@ -16,3 +16,27 @@
     background-color: pink;
 }
 
+.form-check-input {
+    appearance: checkbox !important;
+    -webkit-appearance: checkbox !important;
+    -moz-appearance: checkbox !important;
+    width: auto !important;
+    height: auto !important;
+    margin: 0 !important;
+}
+
+.form-group{
+    margin-bottom: 10px;
+}
+
+.form-check{
+    margin-top: 45px;
+
+}
+
+@media (max-width: 768px) {
+    .form-check{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+}
