--- a/public/assets/css/usuarios/inicio.css
+++ b/public/assets/css/usuarios/inicio.css
@@ -6,85 +6,101 @@ body {
     height: 100%;
 }
 
-.navbar.navbar-transparent {
-    background: #1a1e34 !important;
+.navbar{
+    padding-right: 10px;
 }
 
-.wrapper{
-    top: 100px;
+#fotoPerfil{
+    background-color: rgba(247, 153, 89, 0.85);
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    text-align: center;
+    padding-top: 12px;
 }
 
 /* Contenedor principal */
-.contenedor {
-    display: flex;
-    align-items: stretch;
-    justify-content: space-between;
-    width: 100%;
-    height: 100%;
-}
-
-/* Estilos para el texto */
-.texto {
-    background: linear-gradient(to left, rgba(35, 37, 43, 0) 0%, rgba(35, 37, 43, 0.7) 30%, #23252b 50%);
-    padding: 20px;
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    z-index: 1;
-    position: relative;
-    margin-right: -500px; /* Superposición */
-    box-sizing: border-box; /* Incluye padding en el cálculo del ancho */
-    padding-right: 200px;
-}
-
-.texto h1, .texto p{
-   color: #F79959; 
-   font-weight: bold;
-}
-
-.texto p{
-    font-size: 18px;
-    
-}
-
-/* Estilos para la imagen */
-.imagen {
-    width: 100%;
-    min-width: 1028px;
-    overflow: hidden;
-    position: relative;
-}
-
-.imagen img {
-    width: 100%;
-    height: 100%;
-    min-width: 1028px;
-    object-fit: cover;
-    display: block;
-}
-
-.btn{
-    font-size: 18px;
-}
-
-.btn:hover{
-    transform: scale(1.25) !important;
-}
-
-@media (max-width: 768px) {
-    .contenedor{
-        flex-wrap: wrap-reverse;
+    .contenedor {
+        display: flex;
+        align-items: stretch;
         justify-content: space-between;
+        width: 100%;
+        height: 100%;
+    }
+    
+    .contenedor h1{
+        position: relative;
+        z-index: 2;
+    }
+    
+    .contenedor h1 a img{
+        width: 150px;
+        height: 150px;
+        border-radius: 50%;
     }
 
-    .texto{
-        width: 100%;
-        background: linear-gradient(to bottom, rgba(35, 37, 43, 0) 0%, rgba(35, 37, 43, 0.7) 30%, #23252b 50%);
-        margin-top: -150px;
-        margin-right: 0; /* Superposición */
-        padding-right: 20px;
-        padding-top: 60px;
+    /* Estilos para el texto */
+    .texto {
+        background: linear-gradient(to left, rgba(35, 37, 43, 0) 0%, rgba(35, 37, 43, 0.7) 30%, #23252b 50%);
+        padding: 20px;
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        z-index: 1;
+        position: relative;
+        margin-right: -500px; /* Superposición */
+        box-sizing: border-box; /* Incluye padding en el cálculo del ancho */
+        padding-right: 200px;
     }
-}
+
+    .texto h2, .texto p{
+        color: #F79959;
+        font-weight: bold;
+    }
+
+    .texto p{
+        font-size: 18px;
+
+    }
+
+    /* Estilos para la imagen */
+    .imagen {
+        width: 100%;
+        min-width: 1028px;
+        overflow: hidden;
+        position: relative;
+    }
+
+    .imagen img {
+        width: 100%;
+        height: 100%;
+        min-width: 1028px;
+        object-fit: cover;
+        display: block;
+    }
+
+    .btn{
+        font-size: 18px;
+    }
+
+    .btn:hover{
+        transform: scale(1.25) !important;
+    }
+
+    @media (max-width: 768px) {
+        .contenedor{
+            flex-wrap: wrap-reverse;
+            justify-content: space-between;
+        }
+
+        .texto{
+            width: 100%;
+            background: linear-gradient(to bottom, rgba(35, 37, 43, 0) 0%, rgba(35, 37, 43, 0.7) 30%, #23252b 50%);
+            margin-top: -150px;
+            margin-right: 0; /* Superposición */
+            padding-right: 20px;
+            padding-top: 60px;
+        }
+    }
