--- a/public/assets/css/usuarios/inicio.css
+++ b/public/assets/css/usuarios/inicio.css
@@ -8,6 +8,7 @@ body {
 
 .navbar{
     padding-right: 10px;
+    position: fixed !important;
 }
 
 #fotoPerfil{
@@ -106,27 +107,39 @@ body {
 }
 
 .carousel-item {
-            padding: 0 10%;
-        }
-        .card {
-            height: 300px;
-            background-size: cover;
-            background-position: center;
-            margin: 0 10px;
-            position: relative;
-            overflow: hidden;
-        }
-        .card-body-overlay {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            background: rgba(0, 0, 0, 0.7);
-            color: white;
-            padding: 10px;
-            opacity: 0;
-            transition: opacity 0.3s ease;
-        }
-        .card:hover .card-body-overlay {
-            opacity: 1;
-        }
+    padding: 0 10%;
+}
+.card {
+    height: 300px;
+    background-size: cover;
+    background-position: center;
+    margin: 0 10px;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.card-body-overlay {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 10px;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+.card-body-overlay .card-text{
+    display: none;
+}
+
+.card-body-overlay .card-title , .modal-title{
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.card:hover .card-body-overlay {
+    opacity: 1;
+}
