--- a/public/assets/css/usuarios/inicio.css
+++ b/public/assets/css/usuarios/inicio.css
@@ -110,8 +110,8 @@ body {
     padding: 0 10%;
 }
 .card {
-    height: 300px;
-    background-size: cover;
+    height: 43vh;
+    background-size: 100% 100%;
     background-position: center;
     margin: 0 10px;
     position: relative;
@@ -142,4 +142,18 @@ body {
 
 .card:hover .card-body-overlay {
     opacity: 1;
+}
+
+@media (min-width: 1440px){
+    .card {
+        height: 50vh;
+    }
+}
+
+@media (max-width: 768px){
+    
+    .card {
+        width: 50%;
+    }
+    
 }
