--- a/public/assets/css/usuarios/inicio.css
+++ b/public/assets/css/usuarios/inicio.css
@@ -106,55 +106,24 @@ body {
     }
 }
 
+.carousel-title{
+    margin-left: 120px;
+    margin-right: 100px;
+}
+
+.carousel-title h2 a {
+    font-weight: 600;
+    color: #F79959;
+}
+
+.carousel-title h2:hover {
+    transform: scale(1.2) !important;
+}
+
 .carousel-item {
     padding: 0 10%;
 }
-.card {
-    height: 43vh;
-    background-size: 100% 100%;
-    background-position: center;
-    margin: 0 10px;
-    position: relative;
-    overflow: hidden;
-    cursor: pointer;
-    z-index: 1;
-}
 
-.card-body-overlay {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: rgba(0, 0, 0, 0.7);
-    color: white;
-    padding: 10px;
-    opacity: 0;
-    transition: opacity 0.3s ease;
-}
-
-.card-body-overlay .card-text{
-    display: none;
-}
-
-.card-body-overlay .card-title , .modal-title{
-    font-size: 16px;
-    font-weight: 600;
-}
-
-.card:hover .card-body-overlay {
-    opacity: 1;
-}
-
-@media (min-width: 1440px){
-    .card {
-        height: 50vh;
-    }
-}
-
-@media (max-width: 768px){
-    
-    .card {
-        width: 50%;
-    }
-    
+.carousel-control-prev, .carousel-control-next{
+    z-index: -0;
 }
