--- a/public/assets/css/paginacion.css
+++ b/public/assets/css/paginacion.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     margin-top: 20px;
+    height: 37px;
 }
 .pagination button, .pagination input {
     margin: 0 2px;
