--- a/public/assets/css/black-dashboard.css
+++ b/public/assets/css/black-dashboard.css
@@ -4737,8 +4737,8 @@ input[type="button"].btn-block {
 
 .nav-tabs .nav-link.active,
 .nav-tabs .nav-item.show .nav-link {
-    color: #525f7f;
-    background-color: #1e1e2f;
+    color: #f79959 !important;
+    background-color: red !important;
     border-color: #e3e3e3 #e3e3e3 #1e1e2f;
 }
 
